--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
   }
 </script>
 <script src="js/util.js"></script>
-<script src="js/main.js"></script>
-<script src="js/setup.js"></script>
+<script src="js/similar-wizards.js"></script>
 <script src="js/dialog.js"></script>
+<script src="js/main.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
