--- a/index.html
+++ b/index.html
@@ -204,11 +204,13 @@
   }
 </script>
 <script src="js/util.js"></script>
+<script src="js/backend.js"></script>
+<script src="js/message.js"></script>
 <script src="js/similar-wizards.js"></script>
 <script src="js/dialog.js"></script>
-<script src="js/main.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
