Сделана фильтрация магов

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
 <script src="js/util.js"></script>
 <script src="js/backend.js"></script>
 <script src="js/message.js"></script>
+<script src="js/render.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/similar-wizards.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
